--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@
 
 .card-price {
     font-size: 16px;
-    font-style: italic;
     padding-top: 10px;
     margin-bottom: 0;
 }
@@ -73,7 +72,7 @@
     flex-wrap: wrap;
 }
 
-.form-control {
+.sign {
     width: 400px !important;
     border-left: none !important;
     border-right: none !important;
@@ -87,11 +86,11 @@
     column-gap: 20px;
 }
 
-.form-row .form-control {
+.form-row .sign {
     width: 190px !important;
 }
 
-.form-control:focus {
+.sign:focus {
     box-shadow: none !important;
     -webkit-box-shadow: none !important;
 }
@@ -145,4 +144,32 @@
 
 .breadcrumb-item a:hover {
     color: rgb(24, 24, 24);
+}
+
+
+/***  Cart  ***/
+.cart-header p {
+    font-style: italic;
+}
+
+.cart-product-name a, .cart-remove-all {
+    color: black;
+    text-decoration: none;
+}
+
+.cart-product-name a:hover, .cart-remove-all:hover {
+    color: red;
+    text-decoration: none;
+}
+
+.cart-image {
+    width: 150px;
+}
+
+.cart-product-counter {
+    width: 40px;
+}
+
+.cart-footer {
+    text-align: right;
 }
