--- a/css/style.css
+++ b/css/style.css
@@ -1,175 +1,178 @@
 /***  Navbar  ***/
 .nav-link.active {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .btn .badge {
-    color: white;
-    background-color: black;
-    border-radius: 50px;
-    margin: 2px;
+  color: white;
+  background-color: black;
+  border-radius: 50px;
+  margin: 2px;
 }
 
 .footer-text {
-    text-align: center;
-    color: white;
-    font-size: 14px;
-    margin-bottom: 0;
+  text-align: center;
+  color: white;
+  font-size: 14px;
+  margin-bottom: 0;
 }
 
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+}
 
 /***  Landing  ***/
 .card {
-    text-align: center;
-    transition: box-shadow .2s;
+  text-align: center;
+  transition: box-shadow 0.2s;
 }
 
 .card:hover {
-    box-shadow: 0 0 11px rgba(33, 33, 33, .2);
-
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
 }
 
 .card-body {
-    padding: 0px;
-
+  padding: 0px;
 }
 
 .card-price {
-    font-size: 16px;
-    padding-top: 10px;
-    margin-bottom: 0;
+  font-size: 16px;
+  padding-top: 10px;
+  margin-bottom: 0;
 }
 
 #card-price:hover {
-    color: black
+  color: black;
 }
 
 .card-stars {
-    display: flex;
-    justify-content: center;
-    color: rgb(255, 217, 0);
+  display: flex;
+  justify-content: center;
+  color: rgb(255, 217, 0);
 }
 
 .col a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .col a:hover {
-    color: black;
+  color: black;
 }
 
 .col a p:hover {
-    color: black;
+  color: black;
 }
-
 
 /***  Sing in & Sign up  ***/
 .form {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
 .sign {
-    width: 400px !important;
-    border-left: none !important;
-    border-right: none !important;
-    border-top: none !important;
-    border-radius: 0 !important;
-    border-bottom: 2px rgb(24, 24, 24) solid !important;
+  width: 400px !important;
+  border-left: none !important;
+  border-right: none !important;
+  border-top: none !important;
+  border-radius: 0 !important;
+  border-bottom: 2px rgb(24, 24, 24) solid !important;
 }
 
 .form-row {
-    display: flex;
-    column-gap: 20px;
+  display: flex;
+  column-gap: 20px;
 }
 
 .form-row .sign {
-    width: 190px !important;
+  width: 190px !important;
 }
 
 .sign:focus {
-    box-shadow: none !important;
-    -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
 }
 
 .form .btn {
-    width: 100px;
-    align-self: center;
+  width: 100px;
+  align-self: center;
 }
 
 .form span {
-    align-self: center;
-    font-size: 14px;
-    font-style: italic;
+  align-self: center;
+  font-size: 14px;
+  font-style: italic;
 }
 
 .form span a {
-    color: red;
-    text-decoration: none;
+  color: red;
+  text-decoration: none;
 }
 
 .form span a:hover {
-    color: rgb(24, 24, 24);
+  color: rgb(24, 24, 24);
 }
-
 
 /***  Product page  ***/
 .product-row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .product-image img {
-    height: 300px;
+  height: 300px;
 }
 
 .product-rating {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .product-stars {
-    display: flex;
-    justify-content: left;
-    color: rgb(255, 217, 0);
+  display: flex;
+  justify-content: left;
+  color: rgb(255, 217, 0);
 }
 
 .breadcrumb-item a {
-    text-decoration: none;
-    color: red;
+  text-decoration: none;
+  color: red;
 }
 
 .breadcrumb-item a:hover {
-    color: rgb(24, 24, 24);
+  color: rgb(24, 24, 24);
 }
-
 
 /***  Cart  ***/
 .cart-header p {
-    font-style: italic;
+  font-style: italic;
 }
 
-.cart-product-name a, .cart-remove-all {
-    color: black;
-    text-decoration: none;
+.cart-product-name a,
+.cart-remove-all {
+  color: black;
+  text-decoration: none;
 }
 
-.cart-product-name a:hover, .cart-remove-all:hover {
-    color: red;
-    text-decoration: none;
+.cart-product-name a:hover,
+.cart-remove-all:hover {
+  color: red;
+  text-decoration: none;
 }
 
 .cart-image {
-    width: 150px;
+  width: 150px;
 }
 
 .cart-product-counter {
-    width: 40px;
+  width: 40px;
 }
 
 .cart-footer {
-    text-align: right;
+  text-align: right;
 }
