--- a/css/style.css
+++ b/css/style.css
@@ -9,19 +9,14 @@
   border-radius: 50px;
   margin: 2px;
 }
-
+footer {
+  margin-top: 100px;
+}
 .footer-text {
   text-align: center;
   color: white;
   font-size: 14px;
   margin-bottom: 0;
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
 }
 
 /***  Landing  ***/
