--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,11 @@ footer {
   margin-bottom: 0;
 }
 
+.card img {
+    height: 260px;
+    width: 260px;
+}
+
 #card-price:hover {
   color: black;
 }
@@ -128,6 +133,11 @@ footer {
 .product-rating {
   display: flex;
   flex-direction: row;
+}
+
+.product-image img {
+    width: 300px;
+    height: 300px;
 }
 
 .product-stars {
